--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
         // Certificate Search Function
         function searchCertificate() {
             const code = document.getElementById('certificateSearch').value.trim();
-            if (code === '7788' || code === '200101' || code === '200128' || code === '200130' || code === '200129' || code === '200124' || code === '200126' || code === '200127' || code === '200125' || code === '200121' || code === '200122' || code === '200123' || code === '200115' || code === '200119' || code === '200120' || code === '200116' || code === '200117' || code === '200106' || code === '200109' || code === '200112' || code === '200113' || code === '200114' || code === '200110' || code === '200107' || code === '200108' || code === '200103' || code === '200105' || code === '200102' || code === '200104' || code === '200171' || code === '200111' || code === '200118' || code === '100568' || code === '200567' || code === '2026' || code === '2027') {
+            if (code === '7788' || code === '200175' || code === '200179' || code === '200180' || code === '200176' || code === '200177' || code === '200178' || code === '200101' || code === '200172' || code === '200173' || code === '200174' || code === '200128' || code === '200130' || code === '200129' || code === '200124' || code === '200126' || code === '200127' || code === '200125' || code === '200121' || code === '200122' || code === '200123' || code === '200115' || code === '200119' || code === '200120' || code === '200116' || code === '200117' || code === '200106' || code === '200109' || code === '200112' || code === '200113' || code === '200114' || code === '200110' || code === '200107' || code === '200108' || code === '200103' || code === '200105' || code === '200102' || code === '200104' || code === '200171' || code === '200111' || code === '200118' || code === '100568' || code === '200567' || code === '2026' || code === '2027') {
                 // Show the modal with appropriate certificate
                 document.getElementById('certificateModal').classList.remove('hidden');
                 document.body.style.overflow = 'hidden';
@@ -852,6 +852,60 @@
                     case '7788':
                         document.getElementById('certificateFront').src = `https://via.placeholder.com/600x800/ffffff/2e7d32?text=Frente+Certificado+${code}`;
                         document.getElementById('certificateBack').src = `https://via.placeholder.com/600x800/ffffff/2e7d32?text=Reverso+Certificado+${code}`;
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200172':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/1mLvaXp.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200173':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/TZlYR3H.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200174':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/x9tzGqB.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200175':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/3xLvNno.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200176':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/XpYekzC.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200177':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/GnAcC0r.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200178':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/bLEt2eH.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200179':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/gKvMjWT.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200180':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/KSN33wy.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
                         document.getElementById('certificateCode').textContent = `Código: ${code}`;
                         document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
                         break;
