--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
         // Certificate Search Function
         function searchCertificate() {
             const code = document.getElementById('certificateSearch').value.trim();
-            if (code === '7788' || code === '200175' || code === '200179' || code === '200180' || code === '200176' || code === '200177' || code === '200178' || code === '200101' || code === '200172' || code === '200173' || code === '200174' || code === '200128' || code === '200130' || code === '200129' || code === '200124' || code === '200126' || code === '200127' || code === '200125' || code === '200121' || code === '200122' || code === '200123' || code === '200115' || code === '200119' || code === '200120' || code === '200116' || code === '200117' || code === '200106' || code === '200109' || code === '200112' || code === '200113' || code === '200114' || code === '200110' || code === '200107' || code === '200108' || code === '200103' || code === '200105' || code === '200102' || code === '200104' || code === '200171' || code === '200111' || code === '200118' || code === '100568' || code === '200567' || code === '2026' || code === '2027') {
+            if (code === '7788' || code === '200187' || code === '200188' || code === '200189' || code === '200190' || code === '200181' || code === '200185' || code === '200186' || code === '200182' || code === '200183' || code === '200184' || code === '200175' || code === '200179' || code === '200180' || code === '200176' || code === '200177' || code === '200178' || code === '200101' || code === '200172' || code === '200173' || code === '200174' || code === '200128' || code === '200130' || code === '200129' || code === '200124' || code === '200126' || code === '200127' || code === '200125' || code === '200121' || code === '200122' || code === '200123' || code === '200115' || code === '200119' || code === '200120' || code === '200116' || code === '200117' || code === '200106' || code === '200109' || code === '200112' || code === '200113' || code === '200114' || code === '200110' || code === '200107' || code === '200108' || code === '200103' || code === '200105' || code === '200102' || code === '200104' || code === '200171' || code === '200111' || code === '200118' || code === '100568' || code === '200567' || code === '2026' || code === '2027') {
                 // Show the modal with appropriate certificate
                 document.getElementById('certificateModal').classList.remove('hidden');
                 document.body.style.overflow = 'hidden';
@@ -857,6 +857,66 @@
                         break;
                     case '200172':
                         document.getElementById('certificateFront').src = 'https://i.imgur.com/1mLvaXp.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200181':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/Jqitn59.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200182':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/8oxfNjk.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200183':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/XzOnRnW.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200184':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/4uhEM0S.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200185':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/AcAThEl.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200186':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/AOSMIgO.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200187':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/A59fNaw.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200188':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/CmhspC9.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200189':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/cRQxYHx.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200190':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/bdvOkQk.png';
                         document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
                         document.getElementById('certificateCode').textContent = `Código: ${code}`;
                         document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
