--- a/index.html
+++ b/index.html
@@ -868,13 +868,13 @@
                         document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
                         break;
                     case '200161':
-                        document.getElementById('certificateFront').src = 'blob:https://imgur.com/3143dfbc-49c6-4e35-bc1c-91794a0e712c';
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/UzyUOK2.png';
                         document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
                         document.getElementById('certificateCode').textContent = `Código: ${code}`;
                         document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
                         break;
                     case '200162':
-                        document.getElementById('certificateFront').src = 'blob:https://imgur.com/6cd1ea66-441b-4c0e-90c4-e6a0dfc8b80e';
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/lnGqDLi.png';
                         document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
                         document.getElementById('certificateCode').textContent = `Código: ${code}`;
                         document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
