--- a/index.html
+++ b/index.html
@@ -886,43 +886,43 @@
                         document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
                         break;
                     case '200164':
-                        document.getElementById('certificateFront').src = 'https://i.imgur.com/sCiLvaZ.png';
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/QXCMezP.png';
                         document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
                         document.getElementById('certificateCode').textContent = `Código: ${code}`;
                         document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
                         break;
                     case '200165':
-                        document.getElementById('certificateFront').src = 'https://i.imgur.com/sCiLvaZ.png';
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/exw1N0U.png';
                         document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
                         document.getElementById('certificateCode').textContent = `Código: ${code}`;
                         document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
                         break;
                     case '200166':
-                        document.getElementById('certificateFront').src = 'https://i.imgur.com/sCiLvaZ.png';
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/SHe8xor.png';
                         document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
                         document.getElementById('certificateCode').textContent = `Código: ${code}`;
                         document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
                         break;
                     case '200167':
-                        document.getElementById('certificateFront').src = 'https://i.imgur.com/sCiLvaZ.png';
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/yYxpTko.png';
                         document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
                         document.getElementById('certificateCode').textContent = `Código: ${code}`;
                         document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
                         break;
                     case '200168':
-                        document.getElementById('certificateFront').src = 'https://i.imgur.com/sCiLvaZ.png';
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/vZCVa7a.png';
                         document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
                         document.getElementById('certificateCode').textContent = `Código: ${code}`;
                         document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
                         break;
                     case '200169':
-                        document.getElementById('certificateFront').src = 'https://i.imgur.com/sCiLvaZ.png';
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/P941rzj.png';
                         document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
                         document.getElementById('certificateCode').textContent = `Código: ${code}`;
                         document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
                         break;
                     case '200170':
-                        document.getElementById('certificateFront').src = 'https://i.imgur.com/sCiLvaZ.png';
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/9ugMBsb.png';
                         document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
                         document.getElementById('certificateCode').textContent = `Código: ${code}`;
                         document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
