--- a/index.html
+++ b/index.html
@@ -1564,8 +1564,8 @@
             let details = [];
 
             const allDetails = [
-                { title: 'Identificación', value: 'Esmeralda natural (Berilo verde)' },
-                { title: 'Origen', value: 'Colombia' },
+                { title: 'Validación', value: 'Piedra verificada' },
+                { title: 'Origen', value: 'Certificación Colombiana' },
                 { title: 'Fecha de certificación', value: '15/06/2025' }
             ];
 
