--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
 
                 <div class="bg-gray-50 p-4 rounded-lg">
                     <h4 class="font-semibold text-emerald-700 mb-2">Proceso de certificación</h4>
-                    <p class="text-gray-700 text-sm mb-3">Cada esmeralda es analizada por nuestro equipo de gemólogos certificados utilizando tecnología de punta para garantizar su autenticidad y calidad. El proceso incluye:</p>
+                    <p class="text-gray-700 text-sm mb-3">Cada Piedra es analizada por nuestro equipo de gemólogos certificados utilizando tecnología de punta para garantizar su autenticidad y calidad. El proceso incluye:</p>
                     <ul class="list-disc pl-5 text-gray-700 text-sm space-y-1">
                         <li>Examen microscópico para identificar inclusiones naturales</li>
                         <li>Espectroscopía para determinar elementos cromóforos</li>
