--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
                         </div>
                         <h3 class="text-xl font-semibold text-emerald-800">Indicador de Autenticidad</h3>
                     </div>
-                    <p class="text-gray-700">Este certificado ha sido verificado como auténtico y corresponde a una esmeralda natural colombiana certificada por nuestro laboratorio gemológico.</p>
+                    <p class="text-gray-700">Este certificado ha sido verificado como auténtico y corresponde a una piedra preciosa natural certificada por nuestro laboratorio gemológico.</p>
                 </div>
 
                 <div class="mb-6">
