--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
 
         <!-- Interesting Facts Section -->
         <div class="bg-white p-4 sm:p-6 rounded-lg shadow-lg mb-8">
-            <h2 class="text-2xl sm:text-3xl font-bold text-emerald-800 mb-6 text-center">Datos interesantes sobre las esmeraldas</h2>
+            <h2 class="text-2xl sm:text-3xl font-bold text-emerald-800 mb-6 text-center">Sobre las esmeraldas</h2>
 
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <!-- History -->
@@ -910,6 +910,7 @@
                     <ul class="list-disc pl-5 text-gray-700 text-sm space-y-1">
                         <li>Examen microscópico para identificar inclusiones naturales</li>
                         <li>Espectroscopía para determinar elementos cromóforos</li>
+                        <li>Análisis de composicion mineral</li>
                         <li>Pruebas de refracción y densidad</li>
                         <li>Análisis de fluorescencia bajo luz UV</li>
                         <li>Evaluación de posibles tratamientos</li>
