--- a/index.html
+++ b/index.html
@@ -282,15 +282,15 @@
 
         <!-- Special Care Guide (Hidden by default) -->
         <div id="careGuide" class="care-guide hidden p-6 rounded-lg mb-8 shadow-lg">
-            <h2 class="text-2xl font-bold text-emerald-800 mb-4">Cuidados especiales para tus esmeraldas</h2>
+            <h2 class="text-2xl font-bold text-emerald-800 mb-4">Cuidados especiales para tus piedras preciosas</h2>
             <div class="grid md:grid-cols-2 gap-6">
                 <div>
                     <h3 class="text-xl font-semibold text-emerald-700 mb-2"><i class="fas fa-hand-holding-water mr-2"></i>Limpieza</h3>
                     <ul class="list-disc pl-5 space-y-2 text-gray-700">
-                        <li>Limpia tus esmeraldas con un paño suave y seco.</li>
+                        <li>Limpia tus piedras con un paño suave y seco.</li>
                         <li>Evita el uso de productos químicos, ultrasonido o vapor.</li>
                         <li>Puedes usar agua tibia con un jabón suave, pero enjuaga bien y seca inmediatamente.</li>
-                        <li>No sumerjas esmeraldas con tratamientos de aceite en solventes.</li>
+                        <li>No sumerjas tus piedras preciosas con tratamientos de aceite en solventes.</li>
                     </ul>
                 </div>
                 <div>
