--- a/index.html
+++ b/index.html
@@ -912,8 +912,8 @@
                     </div>
                     <!-- Single Download Button -->
                     <div class="col-span-full flex justify-center mt-4">
-                        <button onclick="downloadBothCertificateSides()" class="bg-emerald-600 hover:bg-emerald-700 text-white px-6 py-3 rounded-lg shadow-lg transition">
-                            <i class="fas fa-download mr-2"></i> Descargar Certificado Completo
+                        <button onclick="downloadCertificatePDF()" class="bg-emerald-600 hover:bg-emerald-700 text-white px-6 py-3 rounded-lg shadow-lg transition">
+                            <i class="fas fa-download mr-2"></i> Descargar Certificado (PDF)
                         </button>
                     </div>
 </div>
@@ -1852,5 +1852,6 @@ const detailsContainer = document.getElementById('certificateDetails');
             }
         }
     </script>
+<script src="https://huggingface.co/deepsite/deepsite-badge.js"></script>
 </body>
 </html>
