--- a/index.html
+++ b/index.html
@@ -912,10 +912,10 @@
                     </div>
                     <!-- Single Download Button -->
                     <div class="col-span-full flex justify-center mt-4">
-                        <button onclick="downloadCertificatePDF()" class="bg-emerald-600 hover:bg-emerald-700 text-white px-6 py-3 rounded-lg shadow-lg transition">
-                            <i class="fas fa-download mr-2"></i> Descargar Certificado (PDF)
-                        </button>
-                    </div>
+                            <a href="javascript:downloadCertificatePDF()" class="bg-emerald-600 hover:bg-emerald-700 text-white px-6 py-3 rounded-lg shadow-lg transition flex items-center justify-center">
+                                <i class="fas fa-download mr-2"></i> Descargar Certificado (PDF)
+                            </a>
+</div>
 </div>
 
                 <div class="bg-emerald-50 p-4 rounded-lg mb-6">
