--- a/index.html
+++ b/index.html
@@ -246,6 +246,8 @@
                     <p class="text-center text-emerald-800 mt-2 text-sm">Especialistas en esmeraldas colombianas.</p>
                      </div>
                     <p class="text-center text-emerald-800 mt-2 text-sm">Certificamos otras gemas naturales bajo los mismos estándares gemológicos.</p>
+                     </div>
+                    <p class="text-center text-emerald-800 mt-2 text-sm">Certificación local con verificación técnica y control gemológico interno.</p>
                 </div>
             </div>
         </div>
