--- a/index.html
+++ b/index.html
@@ -981,8 +981,8 @@
                         document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
                         break;
                     case '11':
-                        document.getElementById('certificateFront').src = 'https://i.imgur.com/MwblOZ5.png';
-                        document.getElementById('certificateBack').src = 'https://i.imgur.com/7WrhXcE.png';
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/HtKztGJ.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/NHlQrNT.png';
                         document.getElementById('certificateCode').textContent = `Código: ${code}`;
                         document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
                         break;
