--- a/index.html
+++ b/index.html
@@ -976,49 +976,49 @@
                         break; 
                     case '200393':
                         document.getElementById('certificateFront').src = 'https://i.imgur.com/qd4mcgs.png';
-                        document.getElementById('certificateBack').src = 'https://i.imgur.com/ODnpaRs.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/6aqa0Bg.png';
                         document.getElementById('certificateCode').textContent = `Código: ${code}`;
                         document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
                         break;
                     case '200394':
                         document.getElementById('certificateFront').src = 'https://i.imgur.com/7Biez15.png';
-                        document.getElementById('certificateBack').src = 'https://i.imgur.com/ODnpaRs.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/6aqa0Bg.png';
                         document.getElementById('certificateCode').textContent = `Código: ${code}`;
                         document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
                         break;
                     case '200395':
                         document.getElementById('certificateFront').src = 'https://i.imgur.com/qRi7iIY.png';
-                        document.getElementById('certificateBack').src = 'https://i.imgur.com/ODnpaRs.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/6aqa0Bg.png';
                         document.getElementById('certificateCode').textContent = `Código: ${code}`;
                         document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
                         break;
                     case '200396':
                         document.getElementById('certificateFront').src = 'https://i.imgur.com/LK1h5dj.png';
-                        document.getElementById('certificateBack').src = 'https://i.imgur.com/ODnpaRs.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/6aqa0Bg.png';
                         document.getElementById('certificateCode').textContent = `Código: ${code}`;
                         document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
                         break;
                     case '200397':
                         document.getElementById('certificateFront').src = 'https://i.imgur.com/AAwmUjR.png';
-                        document.getElementById('certificateBack').src = 'https://i.imgur.com/ODnpaRs.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/6aqa0Bg.png';
                         document.getElementById('certificateCode').textContent = `Código: ${code}`;
                         document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
                         break;
                     case '200398':
                         document.getElementById('certificateFront').src = 'https://i.imgur.com/KqgiQVG.png';
-                        document.getElementById('certificateBack').src = 'https://i.imgur.com/ODnpaRs.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/6aqa0Bg.png';
                         document.getElementById('certificateCode').textContent = `Código: ${code}`;
                         document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
                         break;
                     case '200399':
                         document.getElementById('certificateFront').src = 'https://i.imgur.com/6UExzAe.png';
-                        document.getElementById('certificateBack').src = 'https://i.imgur.com/ODnpaRs.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/6aqa0Bg.png';
                         document.getElementById('certificateCode').textContent = `Código: ${code}`;
                         document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
                         break;
                     case '200400':
                         document.getElementById('certificateFront').src = 'https://i.imgur.com/i0yv5ti.png';
-                        document.getElementById('certificateBack').src = 'https://i.imgur.com/ODnpaRs.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/6aqa0Bg.png';
                         document.getElementById('certificateCode').textContent = `Código: ${code}`;
                         document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
                         break;
