--- a/index.html
+++ b/index.html
@@ -1185,7 +1185,7 @@
                         document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
                         break;
                     case '200479':
-                        document.getElementById('certificateFront').src = '';https://i.imgur.com/T9D7oOd.png
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/SqPASp4.png';
                         document.getElementById('certificateBack').src = 'https://i.imgur.com/6aqa0Bg.png';
                         document.getElementById('certificateCode').textContent = `Código: ${code}`;
                         document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
